--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -311,6 +311,7 @@
                 app:cardBackgroundColor="#0000FFFF"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
+                android:id="@+id/accountSettings"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless">
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -777,5 +778,145 @@
                 app:layout_constraintVertical_bias="0"
                 android:textColor="@android:color/holo_red_light"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:background="@drawable/settings_bottomsheet"
+        android:id="@+id/accountSettingsCard"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        android:elevation="600dp"
+        android:layout_height="250dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_height="5dp"
+            app:cardBackgroundColor="#B1B1B1"
+            app:cardCornerRadius="10dp"/>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp"
+            android:id="@+id/closeAccountSettingsCard"
+            app:strokeWidth="1dp"
+            app:strokeColor="#ADADAD"
+            app:cardBackgroundColor="#0000FFFF"
+            android:layout_gravity="center_horizontal|end"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="35dp">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/close_extra"
+                android:layout_gravity="center" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="70dp"
+            android:padding="8dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:id="@+id/cacheClearCard"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/clearcache"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/cacheClear"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/cacheClear"
+                        android:layout_marginStart="20dp"
+                        android:text="Clear application cache"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/arrow"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"/>
+            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                app:cardElevation="0dp"
+                app:cardBackgroundColor="#0000FFFF"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                android:id="@+id/accountDeleteCard"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackgroundBorderless">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/delete"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginStart="40dp"
+                        android:id="@+id/accountDelete"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/accountDelete"
+                        android:layout_marginStart="20dp"
+                        android:text="Request Account Deletion"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/arrow"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"/>
+            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginHorizontal="30dp"
+                android:src="@drawable/divider"/>
+        </LinearLayout>
+
+
     </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
